--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "memberbeat-interface-frontend",
   "private": true,
   "version": "0.0.1",
   "author": "me@zeljko.dev",
@@ -12,15 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.2.0",
-    "@tanstack/react-query": "^5.59.20",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ethers": "^6.13.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "viem": "^2.21.44",
-    "wagmi": "^2.12.30",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
